--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 DateTime==4.0.1
 Flask==0.10.1
+funcsigs==0.4
 gunicorn==19.3.0
+httpretty==0.8.10
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mock==1.3.0
+pbr==1.8.1
 pytz==2015.6
 requests==2.8.1
+six==1.10.0
+sure==1.2.24
 Werkzeug==0.10.4
 wheel==0.24.0
 zope.interface==4.1.3
